article stack alignment quick fix

--- a/app/components/stack-rows/stack-rows.component.less
+++ b/app/components/stack-rows/stack-rows.component.less
@@ -14,6 +14,7 @@
       width: auto;
       overflow: hidden;
       text-overflow: ellipsis;
+      max-width: ~"calc(100% - 110px)";
       &-keyword {
          text-transform: uppercase;
          margin-bottom: 5px;
